<resources>
    <string name="app_name">Voyd</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login Vyod</string>
    <string name="Login">Login</string>
    <string name="registerVyod">Register to VYOD</string>
    <string name="Register">Register</string>
    <string name="havAcc">"Already have an account? "</string>
    <string name="forgot">Forgot Password?</string>
    <string name="fName">FirstName</string>
    <string name="lName">Last Name</string>
    <string name="resetPass">Reset Password</string>
    <string name="verifyEmail">Verify Email</string>
    <string name="submit">Submit</string>
</resources>