<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".Views.LoginActivity">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="30sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/tvEmailLogin"
        android:layout_below="@+id/tvLoginTitle"
        android:fontFamily="sans-serif"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/edtEmailLogin"
            android:fontFamily="sans-serif"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/tvEmailLogin"
        android:id="@+id/tvPassLogin"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:layout_height="wrap_content"
        android:hint="@string/pass">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/edtPassLogin"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassLogin"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/Register" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassLogin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_toRightOf="@+id/btnRegisterLogin"
        android:fontFamily="sans-serif"
        android:text="@string/Login" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/forgot"
        android:textColor="@color/design_default_color_primary" />



</RelativeLayout>