<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Views.RegisterMember">

    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/registerVyod"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/tvFirstNameRegister"
        android:layout_below="@+id/tvRegisterTitle"
        android:fontFamily="sans-serif"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/fName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/edtFirstNameRegister"
            android:fontFamily="sans-serif"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/tvLastNameRegister"
        android:layout_below="@+id/tvFirstNameRegister"
        android:fontFamily="sans-serif"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/lName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/edtLastNameRegister"
            android:fontFamily="sans-serif"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/tvEmailRegister"
        android:layout_below="@+id/tvLastNameRegister"
        android:fontFamily="sans-serif"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/edtEmailRegister"
            android:fontFamily="sans-serif"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/tvEmailRegister"
        android:id="@+id/tvPassRegister"
        android:layout_marginTop="10dp"

        android:fontFamily="sans-serif"
        android:layout_height="wrap_content"
        android:hint="@string/pass">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/edtPassRegister"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPassRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/Register" />

    <TextView
        android:id="@+id/tvHaveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/havAcc" />

    <TextView
        android:id="@+id/btnLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tvHaveAcc"
        android:background="@color/trans"
        android:fontFamily="sans-serif"
        android:text="@string/Login"
        android:textColor="@color/design_default_color_primary" />



</RelativeLayout>