<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Views.ForgotActivity">

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/forgot"
        android:textSize="30sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/tvEmailForgot"
        android:layout_below="@+id/tvForgotPass"
        android:fontFamily="sans-serif"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/edtEmailForgot"
            android:fontFamily="sans-serif"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEmailForgot"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/resetPass" />



</RelativeLayout>